syntax = "proto3";

option go_package = "/genproto/TransportService";

package genproto;

service TransportService{
    rpc GetBusSchedule(BusScheduleRequest) returns (BusScheduleResponse);
    rpc TrackBusLocation(BusLocationRequest) returns (Station);
    rpc ReportTrafficJam(TrafficJamRequest) returns (TrafficJamResponse);
}

message BusScheduleRequest{
    string BusNumber = 1;
}

message BusScheduleResponse{
    repeated Station Stations = 1;
}

message Station{
    string name = 1;

}

message BusLocationRequest{
    string BusNumber = 1;
}


message TrafficJamRequest {
    string Report = 1;
}

message TrafficJamResponse{
    bool IsReported = 1;
}